cluster/kubetail/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubetail-route
  namespace: kubetail
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubetail.nathanv.app`)
      kind: Rule
      services:
        - name: kubetail-dashboard
          port: 8080
          # middlewares:
          #   - name: authentik-forward-auth
          #     namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
